Coming soon update

--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
               <p>Socials</p>
               <nav class="footer-social-links">
                   <a href="https://twitter.com/DrieDesign" target="_blank" class="social-link" ><i class="mdi mdi-twitter"></i></a>
-                  <a href="https://github.com/DrieDesign/DrieDesign.github.io" target="_blank" class="social-link"><i class="mdi mdi-github-circle"></i></a>
+                  <a href="https://github.com/DrieDesign" target="_blank" class="social-link"><i class="mdi mdi-github-circle"></i></a>
                   <a href="https://www.linkedin.com/company/driedesign/" target="_blank" class="social-link"><i class="mdi mdi-linkedin-box"></i></a>
-                  <a href="#!" target="_blank" class="social-link"><i class="mdi mdi-facebook-box"></i></a>
                   <a href="mailto:info@drie.design" class="social-link"><i class="mdi mdi-email"></i></a>
               </nav>
           </div>
