--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta property="og:image" content="assets/images/social_posts.png" />
+    <meta property="og:title" content="Drie Design" />
+    <meta property="og:description" content="We help early stage startups achieve success with brand and website design and UX product demos." />
     <title>Drie Design</title>
     <link rel="icon" type="image/png" href="assets/images/logomark_small.png">
     <link href="https://fonts.googleapis.com/css?family=Karla:400,700&display=swap" rel="stylesheet">
