--- a/projects-proformapros.html
+++ b/projects-proformapros.html
@@ -209,7 +209,7 @@
                     </div> -->
 
                         <div class="col-auto">
-                            <a href="https://www.proformapros.org/" target="_blank" class="btn btn-with-ball btn-primary2 ">view site</a>
+                            <a href="https://www.figma.com/proto/pziSHApNCkDN8xUnExuRmC/Proforma-Pros?node-id=1%3A108&scaling=scale-down&page-id=0%3A1" target="_blank" class="btn btn-with-ball btn-primary2 ">view site</a>
                         </div>
                     </div>
                 </div>
