Project page updates

--- a/projects-nutrics.html
+++ b/projects-nutrics.html
@@ -196,33 +196,33 @@
         <div class="row align-items-center">
             <div class="row my-auto gh-3 gv-3 align-items-center justify-content-center">
 
-                <div class="col-12 col-lg-6 show-on-scroll" data-show-delay="10" data-show-distance="20" data-show-duration="500" data-show-origin="top">
+                <!-- <div class="col-12 col-lg-6 show-on-scroll" data-show-delay="10" data-show-distance="20" data-show-duration="500" data-show-origin="top">
                     <img class="w-100" src="assets/images/nutrics_bg.jpeg" alt="">
-                </div>
+                </div> -->
                 <div class="col-12 col-lg-5 show-on-scroll" data-show-delay="10" data-show-distance="20" data-show-duration="500" data-show-origin="top">
-                    <h4 class="mb-25 text-light">Nutrics</h4>
-                    <p class="mt-n2 mb-60">Nutrics is an app design focused on user centric meal recomendations. We created the app design and functionality.</p>
+                    <h4 class="mb-25 text-light">Coming Soon!</h4>
+                    <p class="mt-n2 mb-60">New projects will be added soon!</p>
                     <div class="row align-items-center gh-1 d-inline-flex mt-n10">
 
                         <!-- <div class="col-auto">
                         <a href="https://toinfinity.ai/" target="_blank" class="btn btn-with-ball btn-primary ">view site</a>
                     </div> -->
 
-                        <div class="col-auto">
+                        <!-- <div class="col-auto">
                             <a href="projects-nutrics-demo.html" target="_blank" class="btn btn-with-ball btn-primary2 ">view prototype</a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
 
             </div>
             <div class="page-navigation mt-60 show-on-scroll" data-show-delay="0" data-show-distance="0" data-show-duration="0" data-show-origin="bottom">
-                <a href="projects-suds.html" class="btn btn-clean text-light"><svg class="icon-arrow icon-arrow-left" width='26' height='11' viewBox='0 0 26 11' fill='none' xmlns='http://www.w3.org/2000/svg'>
+                <a href="projects-proformapros.html" class="btn btn-clean text-light"><svg class="icon-arrow icon-arrow-left" width='26' height='11' viewBox='0 0 26 11' fill='none' xmlns='http://www.w3.org/2000/svg'>
                                 <path d='M5.5 1L1 5.5L5.5 10' stroke=#fff stroke-width='1.3' stroke-linecap='round' stroke-linejoin='round' />
                                 <path d='M19 5.5H1' 
                                 stroke=#fff 
                                 stroke-width='1.3' stroke-linecap='round' stroke-linejoin='round' /></svg>prev<span class="d-none d-sm-inline"> project</span></a>
                 <a href="projects.html" class="btn btn-primary2 text-white btn-circle btn-xs">all</a>
-                <a href="projects-proformapros.html" class="btn btn-clean text-light">next<span class="d-none d-sm-inline"> project</span><svg class="icon-arrow icon-arrow-right" width='26' height='11' viewBox='0 0 26 11' fill='none' xmlns='http://www.w3.org/2000/svg'>
+                <a href="projects-suds.html" class="btn btn-clean text-light">next<span class="d-none d-sm-inline"> project</span><svg class="icon-arrow icon-arrow-right" width='26' height='11' viewBox='0 0 26 11' fill='none' xmlns='http://www.w3.org/2000/svg'>
                                 <path d='M20.5 1L25 5.5L20.5 10' stroke='currentColor' stroke-width='1.3' stroke-linecap='round' stroke-linejoin='round' />
                                 <path d='M7 5.5H25' stroke='currentColor' stroke-width='1.3' stroke-linecap='round' stroke-linejoin='round' /></svg></a>
             </div>
