Project page edits

--- a/projects.html
+++ b/projects.html
@@ -214,7 +214,7 @@
                         </div> -->
 
                     <!-- Nutrics -->
-                    <div class="swiper-slide" data-cursor-style="cursor-circle" data-cursor-text="explore">
+                    <!-- <div class="swiper-slide" data-cursor-style="cursor-circle" data-cursor-text="explore">
                         <a class="card card-portfolio card-overlay card-image-sm text-centerundefined text-white text-center" href="projects-nutrics.html">
                             <span class="card-img">
                                     <img src="assets/images/nutrics_bg.jpeg" alt="">
@@ -225,7 +225,7 @@
                             <span class="card-category subtitle">app design</span>
                             </span>
                         </a>
-                    </div>
+                    </div> -->
 
                     <!-- Proforma Pros -->
                     <div class="swiper-slide" data-cursor-style="cursor-circle" data-cursor-text="explore">
@@ -242,7 +242,7 @@
                     </div>
 
                     <!-- Strava -->
-                    <div class="swiper-slide" data-cursor-style="cursor-circle" data-cursor-text="explore">
+                    <!-- <div class="swiper-slide" data-cursor-style="cursor-circle" data-cursor-text="explore">
                         <a class="card card-portfolio card-overlay card-image-sm text-centerundefined text-white text-center" href="projects-focuspack.html">
                             <span class="card-img">
                                                 <img src="assets/images/strava_bg.jpeg" alt="">
@@ -253,7 +253,7 @@
                             <span class="card-category subtitle">app design</span>
                             </span>
                         </a>
-                    </div>
+                    </div> -->
 
                     <!-- SUDS. -->
                     <div class="swiper-slide" data-cursor-style="cursor-circle" data-cursor-text="explore">
