Added Edge Analytics project

--- a/projects.html
+++ b/projects.html
@@ -283,9 +283,25 @@
                         </a>
                     </div>
 
-                </div>
+                     <!-- Edge Analytics -->
+             <div class="swiper-slide" data-cursor-style="cursor-circle" data-cursor-text="explore">
+                <a class="card card-portfolio card-overlay card-image-sm card-bg-show text-white text-center" href="projects-edgeanalytics.html">
+                    <span class="card-img">
+                            <img src="assets/images/edgeAnalyticsMockup.jpg" alt="">
+                            <span class="background-color" style="background-color: rgba(14, 14, 14, .3);"></span>
+                    </span>
+                    <span class="card-img-overlay">
+                            <span class="card-title h2"> Edge Analytics </span>
+                    <span class="card-category subtitle">web design & development</span>
+                    </span>
+                </a>
             </div>
             
+                </div>
+            </div>
+
+            
+ 
 
             <div class="swiper-button-wrapper container pb-0 ">
                 <div class="swiper-button-prev"><svg width='26' height='11' viewBox='0 0 26 11' fill='none' xmlns='http://www.w3.org/2000/svg'>
