Added new T&M Enterprises Logo project

--- a/projects.html
+++ b/projects.html
@@ -256,6 +256,20 @@
                 </a>
             </div>
 
+             <!-- T&M Enterprises -->
+             <div class="swiper-slide" data-cursor-style="cursor-circle" data-cursor-text="explore">
+                <a class="card card-portfolio card-overlay card-image-sm card-bg-show text-white text-center" href="projects-t&mEnterprises.html">
+                    <span class="card-img">
+                            <img src="assets/images/T&M_Enterprises_Logo_Mockup.jpg" alt="">
+                            <span class="background-color" style="background-color: rgba(14, 14, 14, .3);"></span>
+                    </span>
+                    <span class="card-img-overlay">
+                            <span class="card-title h2">T&M Enterprises</span>
+                    <span class="card-category subtitle">Logo Design</span>
+                    </span>
+                </a>
+            </div>
+
                     <!-- Proforma Pros -->
                     <div class="swiper-slide" data-cursor-style="cursor-circle" data-cursor-text="explore">
                         <a class="card card-portfolio card-overlay card-image-sm card-bg-show text-white text-center" href="projects-proformapros.html">
