--- a/projects-t&mEnterprises.html
+++ b/projects-t&mEnterprises.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Drie Design | Proforma Pros</title>
+    <title>Drie Design | Michiko Smith Dressage</title>
     <meta name="description" content="Drie Design">
     <meta name="author" content="DrieDesign">
     <link rel="icon" type="image/png" href="assets/images/Logo.png">
@@ -197,32 +197,24 @@
             <div class="row my-auto gh-3 gv-3 align-items-center justify-content-center">
 
                 <div class="col-12 col-lg-6 show-on-scroll" data-show-delay="10" data-show-distance="20" data-show-duration="500" data-show-origin="top">
-                    <img class="w-100" src="assets/images/Proforma_Pros_Mockup.jpg" alt="">
+                    <img class="w-100" src="assets/images/T&M_Enterprises_Logo_Mockup.jpg" alt="">
                 </div>
                 <div class="col-12 col-lg-5 show-on-scroll" data-show-delay="10" data-show-distance="20" data-show-duration="500" data-show-origin="top">
-                    <h4 class="mb-25 text-light">Proforma Pros</h4>
-                    <p class="mt-n2 mb-60">Proforma Pros is a startup finance consulting firm. We were tasked with the UX/UI design of their website.</p>
+                    <h4 class="mb-25 text-light">T&M Enterprises of the Carolinas</h4>
+                    <p class="mt-n2 mb-60">T&M Enterprises of the Carolinas is a startup company focused on the construction and equestrian industries. We were tasked with designing a logo that fit both fields.</p>
                     <div class="row align-items-center gh-1 d-inline-flex mt-n10">
-
-                        <!-- <div class="col-auto">
-                        <a href="https://toinfinity.ai/" target="_blank" class="btn btn-with-ball btn-primary ">view site</a>
-                    </div> -->
-
-                        <div class="col-auto">
-                            <a href="https://www.figma.com/proto/pziSHApNCkDN8xUnExuRmC/Proforma-Pros?node-id=1%3A108&scaling=scale-down&page-id=0%3A1" target="_blank" class="btn btn-with-ball btn-primary2 ">view prototype</a>
-                        </div>
                     </div>
                 </div>
 
             </div>
             <div class="page-navigation mt-60 show-on-scroll" data-show-delay="0" data-show-distance="0" data-show-duration="0" data-show-origin="bottom">
-                <a href="projects-t&mEnterprises.html" class="btn btn-clean text-light"><svg class="icon-arrow icon-arrow-left" width='26' height='11' viewBox='0 0 26 11' fill='none' xmlns='http://www.w3.org/2000/svg'>
+                <a href="projects-msdressage.html" class="btn btn-clean text-light"><svg class="icon-arrow icon-arrow-left" width='26' height='11' viewBox='0 0 26 11' fill='none' xmlns='http://www.w3.org/2000/svg'>
                                 <path d='M5.5 1L1 5.5L5.5 10' stroke=#fff stroke-width='1.3' stroke-linecap='round' stroke-linejoin='round' />
                                 <path d='M19 5.5H1' 
                                 stroke=#fff 
                                 stroke-width='1.3' stroke-linecap='round' stroke-linejoin='round' /></svg>prev<span class="d-none d-sm-inline"> project</span></a>
                 <a href="projects.html" class="btn btn-primary2 text-white btn-circle btn-xs">all</a>
-                <a href="projects-suds.html" class="btn btn-clean text-light">next<span class="d-none d-sm-inline"> project</span><svg class="icon-arrow icon-arrow-right" width='26' height='11' viewBox='0 0 26 11' fill='none' xmlns='http://www.w3.org/2000/svg'>
+                <a href="projects-proformapros.html" class="btn btn-clean text-light">next<span class="d-none d-sm-inline"> project</span><svg class="icon-arrow icon-arrow-right" width='26' height='11' viewBox='0 0 26 11' fill='none' xmlns='http://www.w3.org/2000/svg'>
                                 <path d='M20.5 1L25 5.5L20.5 10' stroke='currentColor' stroke-width='1.3' stroke-linecap='round' stroke-linejoin='round' />
                                 <path d='M7 5.5H25' stroke='currentColor' stroke-width='1.3' stroke-linecap='round' stroke-linejoin='round' /></svg></a>
             </div>
