Added new logo project and removed one project

--- a/projects.html
+++ b/projects.html
@@ -256,6 +256,20 @@
                 </a>
             </div>
 
+             <!-- MS Dressage Logo -->
+             <div class="swiper-slide" data-cursor-style="cursor-circle" data-cursor-text="explore">
+                <a class="card card-portfolio card-overlay card-image-sm card-bg-show text-white text-center" href="projects-mslogo.html">
+                    <span class="card-img">
+                            <img src="assets/images/MS_dressage_logo.jpg" alt="">
+                            <span class="background-color" style="background-color: rgba(14, 14, 14, .3);"></span>
+                    </span>
+                    <span class="card-img-overlay">
+                            <span class="card-title h2">Michiko Smith Dressage</span>
+                    <span class="card-category subtitle">Logo Design</span>
+                    </span>
+                </a>
+            </div>
+
              <!-- T&M Enterprises -->
              <div class="swiper-slide" data-cursor-style="cursor-circle" data-cursor-text="explore">
                 <a class="card card-portfolio card-overlay card-image-sm card-bg-show text-white text-center" href="projects-t&mEnterprises.html">
@@ -271,7 +285,7 @@
             </div>
 
                     <!-- Proforma Pros -->
-                    <div class="swiper-slide" data-cursor-style="cursor-circle" data-cursor-text="explore">
+                    <!-- <div class="swiper-slide" data-cursor-style="cursor-circle" data-cursor-text="explore">
                         <a class="card card-portfolio card-overlay card-image-sm card-bg-show text-white text-center" href="projects-proformapros.html">
                             <span class="card-img">
                                     <img src="assets/images/Proforma_Pros_Mockup.jpg" alt="">
@@ -282,7 +296,7 @@
                             <span class="card-category subtitle">web design</span>
                             </span>
                         </a>
-                    </div>
+                    </div> -->
 
                     <!-- Strava -->
                     <!-- <div class="swiper-slide" data-cursor-style="cursor-circle" data-cursor-text="explore">
