--- a/projects.html
+++ b/projects.html
@@ -265,7 +265,7 @@
                     </span>
                     <span class="card-img-overlay">
                             <span class="card-title h2">Michiko Smith Dressage</span>
-                    <span class="card-category subtitle">Logo Design</span>
+                    <span class="card-category subtitle">logo design</span>
                     </span>
                 </a>
             </div>
@@ -279,7 +279,7 @@
                     </span>
                     <span class="card-img-overlay">
                             <span class="card-title h2">T&M Enterprises</span>
-                    <span class="card-category subtitle">Logo Design</span>
+                    <span class="card-category subtitle">logo design</span>
                     </span>
                 </a>
             </div>
