Added Neurokami Project

--- a/projects-neurokami.html
+++ b/projects-neurokami.html
@@ -197,17 +197,18 @@
             <div class="row my-auto gh-3 gv-3 align-items-center justify-content-center">
 
                 <div class="col-12 col-lg-6 show-on-scroll" data-show-delay="10" data-show-distance="20" data-show-duration="500" data-show-origin="top">
-                    <img class="w-100" src="assets/images/SUDS_Mockup.jpg" alt="">
+                    <img class="w-100" src="assets/images/neurokamiMockup.jpg" alt="">
                 </div>
                 <div class="col-12 col-lg-5 show-on-scroll" data-show-delay="10" data-show-distance="20" data-show-duration="500" data-show-origin="top">
-                    <h4 class="mb-25 text-light">SUDS.</h4>
-                    <p class="mt-n2 mb-60">SUDS. is small business e-commerce platform. We were responsible for creating the UI/UX website design.</p>
+                    <h4 class="mb-25 text-light">Neurokami</h4>
+                    <p class="mt-n2 mb-60">Neurokami is an app designed specifically for the neurodiverse community. We were tasked with the ui/ux design of this app.
+                       Part of the project involved the design of several accessability features for the neurodiverse user.    </p>
                     <div class="row align-items-center gh-1 d-inline-flex mt-n10">
 
                         <div class="col-auto">
-                            <a href="https://www.figma.com/proto/Cu2R8ghH9rtuv8mxWeafQr/SUDS-Website?node-id=144%3A1384&scaling=scale-down&page-id=0%3A1&starting-point-node-id=144%3A1384" target="_blank" class="btn btn-with-ball btn-primary2 ">view prototype</a>
+                            <a href="https://www.figma.com/proto/qeIXoLR2iIBEraGEqzmnTs/Prototype?type=design&node-id=1-265&t=o5OZFPRU2tBig81t-1&scaling=scale-down&page-id=0%3A1&starting-point-node-id=1%3A265&mode=design" target="_blank" class="btn btn-with-ball btn-primary2 ">view prototype</a>
                         </div>
-                    </div>
+                    </div> 
                 </div>
 
             </div>
