--- a/projects.html
+++ b/projects.html
@@ -312,16 +312,16 @@
                         </a>
                     </div> -->
 
-                    <!-- SUDS. -->
+                    <!-- Neurokami -->
                     <div class="swiper-slide" data-cursor-style="cursor-circle" data-cursor-text="explore">
-                        <a class="card card-portfolio card-overlay card-image-sm card-bg-show text-white text-center" href="projects-suds.html">
+                        <a class="card card-portfolio card-overlay card-image-sm card-bg-show text-white text-center" href="projects-neurokami.html">
                             <span class="card-img">
-                                    <img src="assets/images/SUDS_Mockup.jpg" alt="">
+                                    <img src="assets/images/neurokamiMockup.jpg" alt="">
                                     <span class="background-color" style="background-color: rgba(14, 14, 14, .3);"></span>
                             </span>
                             <span class="card-img-overlay">
-                                    <span class="card-title h2">SUDS.</span>
-                            <span class="card-category subtitle">ui/ux design</span>
+                                    <span class="card-title h2">Neurokami</span>
+                            <span class="card-category subtitle">ui/ux app design</span>
                             </span>
                         </a>
                     </div>
