Added Borrey Law Project

--- a/projects.html
+++ b/projects.html
@@ -326,6 +326,20 @@
                         </a>
                     </div>
 
+                    <!-- Borrey Law  -->
+                    <div class="swiper-slide" data-cursor-style="cursor-circle" data-cursor-text="explore">
+                        <a class="card card-portfolio card-overlay card-image-sm card-bg-show text-white text-center" href="projects-borreylaw.html">
+                            <span class="card-img">
+                                    <img src="assets/images/borreyLawMockup.jpg" alt="">
+                                    <span class="background-color" style="background-color: rgba(14, 14, 14, .3);"></span>
+                            </span>
+                            <span class="card-img-overlay">
+                                    <span class="card-title h2">Borrey Law</span>
+                            <span class="card-category subtitle">web design & development</span>
+                            </span>
+                        </a>
+                    </div>
+
             
                 </div>
             </div>
